# stamp-generator

./: .gitignore  LICENSE  README.md  pyproject.toml
src/stamp_generator/: cli.py
